<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.cyanspring.algo</groupId>
	<artifactId>algo</artifactId>
	<packaging>pom</packaging>
	
	<version>2.56</version>
	<name>algo</name>
	<url>http://maven.apache.org</url>
	<modules>
		<module>dependency</module>
		<module>simulator</module>
		<module>common</module>
		<module>avro</module>
		<module>transport</module>
		<module>event</module>
		<module>strategy</module>
		<module>sample</module>
		<module>custom</module>
		<module>marketdata</module>
		<module>adaptor</module>
		<module>server</module>
		<module>soak</module>
		<module>info</module>
		<module>apievent</module>
		<module>CSTWparent</module>
		<module>kdb</module>
	</modules>
	
	<repositories>
		<repository>
			<id>java.net.m2</id>
			<name>Java.net Repository for Maven</name>
			<url>http://download.java.net/maven/2/</url>
			<layout>default</layout>
		</repository>
		<repository>        
    		<id>repository.jboss.org-public</id>       
    		<name>JBoss.org Maven repository</name>       
    		<url>https://repository.jboss.org/nexus/content/groups/public</url>     
    	</repository>
		<repository>
			<id>fdt</id>
			<name>FDT Repository</name>
			<url>http://125.227.191.252:8081/nexus/content/groups/public</url>
		</repository>
  	</repositories>
	
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<spring-version>3.0.5.RELEASE</spring-version>
	</properties>

  	<build>
	    <plugins>
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>2.3</version>
				<configuration>
				<descriptor>assembly.xml</descriptor>
				</configuration>
			</plugin>
			<plugin> 
				<groupId>org.apache.maven.plugins</groupId> 
				<artifactId>maven-surefire-plugin</artifactId> 
				<version>2.5</version> 
				<configuration> 
					<forkMode>once</forkMode> 
					<argLine>-Xms512m -Xmx512m -XX:PermSize=128m -XX:MaxPermSize=128</argLine> 
				</configuration> 
			</plugin> 
			<plugin> 
				<groupId>org.apache.maven.plugins</groupId> 
				<artifactId>maven-compiler-plugin</artifactId> 
				<!-- Lock down plugin version for build reproducibility --> 
				<version>2.5.1</version> 
				<configuration> 
					  <source>1.7</source> 
					  <target>1.7</target> 
				</configuration> 
			</plugin>
			
		</plugins>
	</build>

	<dependencies>
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>apache-log4j-extras</artifactId>
			<version>1.1</version>
			<scope>runtime</scope>
		</dependency>		

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.6.1</version>
		</dependency>

		<dependency>  
			<groupId>org.slf4j</groupId>  
			<artifactId>jcl-over-slf4j</artifactId>  
			<version>1.6.1</version>  
			<scope>runtime</scope>  
		</dependency>  

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>1.6.1</version>
			<scope>runtime</scope>  
		</dependency>

		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.14</version>
		</dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.8.1</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-core</artifactId>
			<version>${spring-version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context</artifactId>
			<version>${spring-version}</version>
			<exclusions>  
				<exclusion>  
					<groupId>commons-logging</groupId>  
					<artifactId>commons-logging</artifactId>  
				</exclusion>  
			</exclusions>  
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-beans</artifactId>
			<version>${spring-version}</version>
		</dependency>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-test</artifactId>
			<version>${spring-version}</version>
		</dependency>

		<dependency>
		    <groupId>com.thoughtworks.xstream</groupId>
		    <artifactId>xstream</artifactId>
		    <version>1.4.8</version>
		</dependency>
		<dependency>
		    <groupId>kxml2</groupId>
		    <artifactId>kxml2</artifactId>
		    <version>2.3.0</version>
		</dependency>
		<dependency>
		    <groupId>org.apache.commons</groupId>
		    <artifactId>commons-csv</artifactId>
		    <version>1.2</version>
		</dependency>	

  	</dependencies>

</project>
